infra/k8s/postgres-monolith.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-monolith
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-monolith
  template:
    metadata:
      labels:
        app: postgres-monolith
    spec:
      containers:
      - image: postgres:14-alpine
        name: postgres-monolith
        ports:
        - name: postgres
          containerPort: 5432
