infra/k8s/4-monolith.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-monolith
spec:
  selector:
    app: ecommerce-monolith
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-monolith
  labels:
    app: ecommerce-monolith
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce-monolith
  template:
    metadata:
      labels:
        app: ecommerce-monolith
    spec:
      containers:
      - image: viniciusvas90/ecommerce-monolith:1.0.0-SNAPSHOT
        name: ecommerce-monolith
        ports:
        - containerPort: 8080
